chore(event-sourcing): Introduce event-sourcing
