# runtime-jakarta/src/main/kotlin/com/example/marvel/web/rest/jakarta/EmployeeOrchestrationResource.kt
@@ -1,13 +1,14 @@
 package com.example.marvel.web.rest.jakarta
 
 import com.example.marvel.domain.model.api.employee.EmployeeDto
-import com.example.marvel.domain.model.api.record.RecordDto
+import com.example.marvel.domain.model.api.record.RecordModel
 import com.example.marvel.domain.model.api.recordcollection.RecordCollectionCreateCommand
 import com.example.marvel.domain.model.api.recordcollection.RecordCollectionDto
 import com.example.marvel.domain.model.api.recordcollection.RecordCollectionUpdateCommand
 import com.example.marvel.web.grpc.EmployeeOperationsServiceNamespace
 import com.example.marvel.web.rest.EmployeeResourceAdapter
 import io.reactivex.Flowable
+import io.vertx.core.json.JsonObject
 import io.vertx.kotlin.coroutines.dispatcher
 import io.vertx.reactivex.core.eventbus.EventBus
 import kotlinx.coroutines.CoroutineScope
@@ -15,15 +16,20 @@ import kotlinx.coroutines.future.future
 import java.time.Month
 import java.time.Year
 import java.util.concurrent.CompletionStage
-import javax.enterprise.context.ApplicationScoped
+import javax.annotation.PostConstruct
 import javax.inject.Inject
 import javax.ws.rs.Consumes
+import javax.ws.rs.GET
 import javax.ws.rs.NotFoundException
+import javax.ws.rs.POST
+import javax.ws.rs.PUT
 import javax.ws.rs.Path
+import javax.ws.rs.PathParam
 import javax.ws.rs.Produces
+import javax.ws.rs.QueryParam
 import javax.ws.rs.core.Context
 import javax.ws.rs.core.HttpHeaders
-import javax.ws.rs.core.MediaType
+import javax.ws.rs.core.MediaType.APPLICATION_JSON
 import kotlin.coroutines.CoroutineContext
 import io.vertx.core.Vertx as VertxBare
 
@@ -31,10 +37,10 @@ import io.vertx.core.Vertx as VertxBare
  * Named imports used for program composition to be more self-documented
  */
 @Path("/api")
-@Produces(MediaType.APPLICATION_JSON)
-@Consumes(MediaType.APPLICATION_JSON)
-@ApplicationScoped
-class EmployeeOrchestrationResource(VX: VertxBare, private val employees: EmployeeOperationsServiceNamespace) : EmployeeResourceAdapter,
+@Produces(APPLICATION_JSON)
+@Consumes(APPLICATION_JSON)
+class EmployeeOrchestrationResource @Inject constructor(VX: VertxBare, private val employees: EmployeeOperationsServiceNamespace)
+    : EmployeeResourceAdapter,
         /**
          * FIXME: @see in [README.md]
          */
@@ -56,48 +62,38 @@ class EmployeeOrchestrationResource(VX: VertxBare, private val employees: Employ
     @Context
     internal lateinit var headers: HttpHeaders
 
-    override fun getEmployees(): Flowable<EmployeeDto> =
-            Flowable.fromIterable(Iterable(employees.listEmployees()::iterator))
+    @PostConstruct
+    fun init() {
+        eventBus.registerCodec(DomainEventCodec())
+    }
 
-    override fun getForPeriod(id: Long, year: Int, month: Month): Flowable<RecordDto> =
+    @GET
+    @Path("/employee")
+    override fun getEmployees(): Flowable<EmployeeDto> =
+            Flowable.fromIterable(Iterable(employees.streamEmployees()::iterator))
+                    .doFinally { eventBus.publish("any.address", JsonObject.mapFrom("""{"pojo event":"example "EmployeeCreatedEvent" "}""")) }
+
+    @GET
+    @Path("/employee/{id:[1-9][0-9]*}/records")
+    override fun getForPeriod(
+            @PathParam("id")        id: Long,
+            @QueryParam("year")   year: Int,
+            @QueryParam("month") month: Month): Flowable<RecordModel> =
             Flowable.fromIterable(Iterable(employees.listForPeriod(id, Year.of(year), month)::iterator))
 
-    override fun saveWholePeriod(id: Long, records: RecordCollectionCreateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
+    @POST
+    @Path("/employee/{id:[1-9][0-9]*}/records")
+    override fun saveWholePeriod(
+            @PathParam("id") id: Long,
+            records: RecordCollectionCreateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
         employees.createWholePeriod(id, records) ?: throw NotFoundException()
     }
 
-    override fun adjustWholePeriod(id: Long, records: RecordCollectionUpdateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
+    @PUT
+    @Path("/employee/{id:[1-9][0-9]*}/records")
+    override fun adjustWholePeriod(
+            @PathParam("id") id: Long,
+            records: RecordCollectionUpdateCommand): CompletionStage<RecordCollectionDto> = CoroutineScope(this).future {
         employees.updateWholePeriod(id, records) ?: throw NotFoundException()
     }
-
-//    fun getEmployeesDemo1(): CompletionStage<List<EmployeeDto>> = CoroutineScope(Dispatchers.IO).future {
-//        val program = IO.fx {
-//            val all: ListK<EmployeeDto> = !effect { employees.listEmployees().toList().k() }
-//            val any: EmployeeDto?        = !effect { employees.getAnyUserDemo() }
-//            /*
-//             * Traversing immutable nestes structures
-//             */
-////            val updatedEmployees: Employees = Employees.employees.every(ListK.each()).name.modify(Employees(all), String::toUpperCase)
-////            val names: ListK<String>        = Employees.employees.every(ListK.each()).name.getAll(updatedEmployees)
-//            /*
-//             * No-op unwrapped alternative
-//             */
-//            Each.fromTraverse<ForListK, String>(ListK.traverse()).each().modify(all.map(EmployeeDto::email).k(), String::toUpperCase)
-//
-//            val namesStr = names.joinToString()
-//            headers.requestHeaders.putSingle("X-ErrorCode", namesStr)
-//            eventBus.publish("audit", "employeee.added.$namesStr")
-//            updatedEmployees
-//        }
-//
-//        val execution: Employees = program.unsafeRunSync()
-//        execution
-//    }
-//
-//    fun getEmployeesDemo2(): CompletionStage<List<EmployeeDto>>  = CoroutineScope(this).future {
-//        emptyList()
-////        Nel.fromList(employees.listEmployees()).fold({ headers.requestHeaders.putSingle("X-ErrorCode", "WHAAAT"); emptyList<EmployeeDto>() }) {
-////            it.all.k().onEach { EmployeeInput.name.modify(it, String::toUpperCase) }
-////        }
-//    }
 }
